# astro

./: .babelrc  .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deployment.yaml  docker-entrypoint.sh  flake.nix  gitlab-ci.yml  nodemon.json  package-lock.json  package.json  seed.sql  tsconfig.json  tsconfig.server.json
.direnv/: flake-profile-1-link
.github/workflows/: deploy.yaml
chart/: values.yaml
migrations/: 20230716232426_init.sql
server/: .air.toml  go.mod  go.sum  index.ts  nextapp.ts
server/config/: dbConfig.ts  initDb.ts  logger.ts  seed-data.ts  serverConfig.ts
server/controllers/: category.ts  config.ts  file.ts  healthz.ts  index.ts  service.ts  theme.ts
server/entities/: category.ts  config.ts  index.ts  link.ts  note.ts  ping.ts  service.ts  theme.ts
server/routes/: config.ts  healthz.ts  index.ts  service.ts  theme.ts
server/scripts/: initdb.go
shared/types/: internal.ts
shared/utils/: fetcher.ts
src/: main.rs
src/api/: category.rs  client_config.rs  mod.rs  routes.rs  service.rs  services.rs  static_paths.rs  upload.rs
src/application/: uptime_check.rs
src/components/: area-chart.tsx  button.tsx  card.tsx  checkbox.tsx  dock.tsx  fade.tsx  flex.tsx  fullpage-loader.tsx  grid.tsx  input.tsx  kbd.tsx  line-chart.tsx  modal.tsx  padder.tsx  page-transition.tsx  search-input.tsx  service-card.tsx  service-list.tsx  tabs.tsx  toast.tsx  tooltip.tsx
tmp/: conf  db  snap.00000000000004C6
typings/: index.ts  internal.ts  radixIconsTypes.ts
web/: esbuild.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts.timestamp-1689204646837-227e80191b057.mjs
(+229 files in other folders)
