[package]
name = "astro"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "astro"
path = "src/main.rs"



[dependencies]
axum = { version = "0.6.16", features = ["ws", "headers"] }
tower-http = {version = "0.4.1", features = ["cors"]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.96"
mime_guess = "2.0.4"
uuid = { version = "1.3.4", features = ["fast-rng", "v4"] }
thiserror = "1.0.40"
async-trait = "0.1.68"
structopt = "0.3.26"
sled = {version = "0.34.7",  features = ["compression"]}
tower = "0.4.13"
bincode = "1.3.3"
chrono = {version = "0.4.26", features = ["serde"]}
reqwest = "0.11.18"
log = { version = "0.4.19", features = ["kv_unstable_std"] }
derive_more = "0.99.17"
